--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               C°
             </button>
             <button id="farenhiet">
-              <a href="https://urzhn.csb.app/">
+              <a href="https://quizzical-feynman-582407.netlify.app/">
                 F°
               </a>
             </button>
